--- a/index.html
+++ b/index.html
@@ -1890,7 +1890,8 @@ INSTRUCTIONS: Edit the <title> tag and Meta tags to customize this page.
 
                 <!-- DOWNLOAD RESUME BUTTON -->
                 <div style="margin-top: 2rem;">
-                    <a href="YOUR_RESUME_LINK_HERE" class="btn slide-in-left delay-400">DOWNLOAD RESUME</a>
+                    <a href="https://drive.google.com/uc?export=download&id=1kTgzj_CoF0Jlz5SWK8tnd1TxHRaYwczY"
+                        download="Imasha_Randula_Resume.pdf" class="btn slide-in-left delay-400">DOWNLOAD RESUME</a>
                 </div>
             </div>
 
