--- a/index.html
+++ b/index.html
@@ -2088,7 +2088,7 @@ INSTRUCTIONS: Edit the <title> tag and Meta tags to customize this page.
                         <div class="project-info-row">
                             <div>
                                 <h3 class="new-project-title">Weather Prediction</h3>
-                                <p class="new-project-tags">Web Design, Ml</p>
+                                <p class="new-project-tags">Web Design, Ml, Python</p>
                             </div>
                             <div class="project-actions">
                                 <a href="https://github.com/itz-im45h4/homagama-weather-backend" class="action-icon">
