--- a/index.html
+++ b/index.html
@@ -1853,8 +1853,7 @@ INSTRUCTIONS: Edit the <title> tag and Meta tags to customize this page.
         <!-- EDIT THIS: Replace image URL with your own photo (landscape or square aspect ratio works best) -->
         <div class="header-image">
             <!-- HEADER IMAGE: Main hero/header portrait - full height image (aspect ratio: landscape/square works best) -->
-            <a href="https://ibb.co/7d0qnZJr"><img src="https://i.ibb.co/xtrN1BSz/retouch-2025090720344293.jpg"
-                    alt="retouch-2025090720344293" border="0"></a>
+            <img src="https://i.ibb.co/xtrN1BSz/retouch-2025090720344293.jpg" alt="retouch-2025090720344293" border="0">
         </div>
     </header>
 
@@ -1899,9 +1898,8 @@ INSTRUCTIONS: Edit the <title> tag and Meta tags to customize this page.
             <!-- EDIT THIS: Replace image URL with your own photo -->
             <div class="bio-image">
                 <!-- BIO IMAGE: Secondary portrait for bio/about section (aspect ratio: landscape/square works best) -->
-                <a href="https://ibb.co/CKBxwjHt"><img
-                        src="https://i.ibb.co/TMczwQgT/PXL-20250120-042907330-MP-1-4-1.jpg"
-                        alt="PXL-20250120-042907330-MP-1-4-1" border="0"></a>
+                <img src="https://i.ibb.co/TMczwQgT/PXL-20250120-042907330-MP-1-4-1.jpg"
+                    alt="PXL-20250120-042907330-MP-1-4-1" border="0">
             </div>
         </section>
 
