--- a/index.html
+++ b/index.html
@@ -2060,7 +2060,7 @@ INSTRUCTIONS: Edit the <title> tag and Meta tags to customize this page.
                 <!-- Header -->
                 <div class="projects-header-new fade-in">
                     <span class="projects-subtitle-new">My Work</span>
-                    <h2 class="projects-title-new">RECENT PROJECT</h2>
+                    <h2 class="projects-title-new">RECENT PROJECTS</h2>
                 </div>
 
                 <!-- Projects Grid -->
